--- a/style.css
+++ b/style.css
@@ -12,11 +12,10 @@ body{
     
 }
 #history{
-    text-align: right;
+    text-align: left;
     position: relative;
-    padding-right: 5px;
-    right: 10px;
-    top: -70px;
+   top: -100px;
+   
 }
 
 
